# comp-math-systems-of-linear-equations

./: .bazelrc  .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  WORKSPACE
app/: BUILD
app/linal/: BUILD
app/linal/include/: matrix.h  vector.h
app/linal/mut/: BUILD
app/linal/mut/include/: matrix.h  vector.h
app/main/: BUILD  main.cc
app/main/src/: main.cc
app/matrix/: BUILD
app/sle/: BUILD
app/sle/include/method/gauss/: solution.h
app/sle/include/method/iteration/: diagonal-predominance.h  solution.h  valid-sle.h
app/sle/src/method/iteration/: solution.cc
doc/: note.md  report-sle.tex  report.tex
math/linal/: BUILD  matrix.h  vector.h
math/sle/: BUILD
math/sle/method/gauss/: solution.h
math/sle/method/iteration/: solution.h  valid-sle.h
res/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
src/: main.cpp
src/math/linal/: matrix.h
src/math/sle/method/gauss/: solution.h
src/math/sle/method/iteration/: solution.h  valid-sle.h
toolchain/: cc_toolchain_config.bzl
